# taskpilot

./: .gitignore  CONTRIBUTING.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
docs/: taskpilot-dashboard.html
examples/: tasks.yaml
src/taskpilot/: __init__.py  __main__.py  cli.py  config.py  cron.py  models.py  runner.py  scheduler.py
src/taskpilot/actions/: __init__.py  base.py  builtins.py
tests/: test_actions.py  test_config.py  test_cron.py  test_scheduler.py
